# opendrop

./: .gitignore  .gitmodules  CITATION.cff  LICENSE  Makefile  Manifest.in  README.PoC.md  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: codeql.yml  createrelease.yml  pythonpublish.yml  pythonpublishtest.yml  testpackage.yml
opendrop/: __init__.py  __main__.py  cli.py  client.py  config.py  logger.py  server.py  util.py  zeroconf.py
src/opendrop/: __main__.py  client.py  config.py
tests/: test_client.py  test_server.py
